--- a/style.css
+++ b/style.css
@@ -443,7 +443,12 @@
             height: 200px;
             overflow: hidden;
         }
-        
+        .project-img1{
+            height:300px;
+        }
+        .project-img1 img{
+            width:100%;  
+        }
         .project-img img {
             width: 100%;
             height: 100%;
